--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
