--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.25.0",
@@ -31,6 +31,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "dotenv": "^9.0.1",
     "express": "^4.17.1"
   }
 }
