--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
+    "@types/node": "^15.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.25.0",
@@ -26,11 +27,13 @@
     "lint-staged": "^10.5.4",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "prisma": "^2.22.1",
     "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@prisma/client": "^2.22.1",
     "dotenv": "^9.0.1",
     "express": "^4.17.1"
   }
