--- a/package.json
+++ b/package.json
@@ -20,16 +20,20 @@
     "@types/node": "^15.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "faker": "^5.5.3",
     "husky": "^6.0.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.6",
     "lint-staged": "^10.5.4",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "prisma": "^2.22.1",
+    "superagent": "^6.1.0",
+    "supertest": "^6.1.4",
     "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
