--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "test": "jest",
+    "test": "jest --coverage",
     "build": "tsc -p tsconfig.json",
     "prepare": "husky install"
   },
@@ -18,6 +18,7 @@
     "@types/faker": "^5.5.7",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.0",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "babel-cli": "^6.26.0",
@@ -34,7 +35,7 @@
     "prisma": "^2.22.1",
     "superagent": "^6.1.0",
     "supertest": "^6.1.4",
-    "ts-jest": "^26.5.5",
+    "ts-jest": "^27.0.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
