--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "author": "Samuel <samnap11@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.ts",
-    "test": "jest --coverage",
+    "dev": "dotenv -e .env.development nodemon src/index.ts",
+    "test": "dotenv -e .env.test -- jest --coverage",
     "build": "tsc -p tsconfig.json",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "dev:push": "dotenv -e .env.development -- prisma db push --force-reset",
+    "test:push": "dotenv -e .env.test -- prisma db push --force-reset",
+    "dev:seed": "dotenv -e .env.development -- prisma db seed --preview-feature",
+    "test:seed": "dotenv -e .env.test -- prisma db seed --preview-feature"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
@@ -42,6 +46,7 @@
   "dependencies": {
     "@prisma/client": "^2.22.1",
     "dotenv": "^9.0.1",
+    "dotenv-cli": "^4.0.0",
     "express": "^4.17.1"
   }
 }
