--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,22 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: node:10.18-jessie
+
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: api-pmb-test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     strategy:
       matrix:
@@ -23,23 +39,8 @@ jobs:
           cache: 'yarn'
       - run: yarn --frozen-lockfile
       - run: yarn run build
-
-  unit-testing:
-    name: Unit Testing
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
-      - run: yarn --frozen-lockfile
-      - run: yarn run build
-      - run: ls
+      - name: Unit Testing
+        run: yarn run test
+        env:
+          PORT: 8000
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/api-pmb-test?schema=public
