--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "faker": "^5.5.3",
     "husky": "^6.0.0",
     "jest": "^27.0.6",
+    "jest-mock-extended": "^1.0.18",
     "lint-staged": "^10.5.4",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
@@ -47,6 +48,7 @@
     "@prisma/client": "^2.22.1",
     "dotenv": "^9.0.1",
     "dotenv-cli": "^4.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.7.1"
   }
 }
