build: install types/pg and update main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,10 +40,7 @@ jobs:
       - run: yarn --frozen-lockfile
       - run: yarn run build
       - name: Connect to PostgreSQL
-        run: ts-node postgres-client.ts
-        env:
-          POSTGRES_HOST: localhost
-          POSTGRES_PORT: 5432
+        run: npx ts-node postgres-client.ts
       - name: Unit Testing
         run: yarn run test
         env:
