--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/faker": "^5.5.7",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.0",
+    "@types/pg": "^8.6.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
