build: change client to js file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,10 @@ jobs:
       - run: yarn --frozen-lockfile
       - run: yarn run build
       - name: Connect to PostgreSQL
-        run: npx ts-node postgres-client.ts
+        run: node postgres-client.js
+        env:
+          POSTGRES_HOST: localhost
+          POSTGRES_PORT: 5432
       - name: Unit Testing
         run: yarn run test
         env:
