--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,4 +48,4 @@ jobs:
         run: yarn run test
         env:
           PORT: 8000
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/api-pmb-test?schema=public
+          DATABASE_URL: postgresql://postgres:password@localhost:5432/api-pmb-test?schema=public
