build: update main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,20 +8,19 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: node:10.18-jessie
 
     services:
       postgres:
         image: postgres
         env:
           POSTGRES_PASSWORD: password
-        ports:
-          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+          - 5432:5432
 
     strategy:
       matrix:
@@ -40,10 +39,10 @@ jobs:
       - name: Connect to PostgreSQL
         run: node postgres-client.js
         env:
-          POSTGRES_HOST: postgres
+          POSTGRES_HOST: localhost
           POSTGRES_PORT: 5432
       - name: Unit Testing
         run: yarn run test
         env:
           PORT: 8000
-          DATABASE_URL: postgresql://postgres:password@postgres:5432/api-pmb-test?schema=public
+          DATABASE_URL: postgresql://postgres:password@localhost:5432/api-pmb-test?schema=public
