--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@types/faker": "^5.5.7",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.0",
-    "@types/pg": "^8.6.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
@@ -49,7 +48,6 @@
     "@prisma/client": "^2.22.1",
     "dotenv": "^9.0.1",
     "dotenv-cli": "^4.0.0",
-    "express": "^4.17.1",
-    "pg": "^8.7.1"
+    "express": "^4.17.1"
   }
 }
