Fix #6: Init Basic Unit Testing (#10)
* feat(orm): add space to fill the parent model

* feat(orm): add timestamps and relations on dept and major

* feat(orm): add seed file

* feat(orm): init small group table and add relation between major and member

* refactor: remove meaningless comments

* feat(orm): remove small groups, init discipleship

* refactor: refactor seeding data to separated folder

* feat(orm): define major model

* feat(orm): add department seeding

* feat: test get departments

* refactor: separate app and server (index)

* feat: add example test

* add: completed fields of models in Prisma schema

* feat: add location enum for department

* feat: add location enum to seeding

* feat: add example create department endpoint

* add: completed majors and departments list

* docs: add db push rollback readme

* feat: update depts

* refactor: function for seeding

* refactor: change some column to enum

* perf: center the init of prisma client

* style: change to pascal case

* build: add faker

* fix: prisma schema

* feat: add parent and member seeder

* fix: discipleship table and seeding

* feat: test api to pluck

* fix: datetime bug UTC

* chore: resolve conflict

* feat: add base url api test

* docs: update command

* chore: add .env.test and .env.development on .gitignore

* build: update script multi-env package.json

* test: all remaining app.ts

* build: add workflow config

* build: edit main.yml

* build: include pr on ci

* build: separate two jobs ci

* build: edit ci

* build: add postgres and env ci

* build: connect to postgres client

* test: init singleton and prisma client

* build: edit yml

* build: update main.yml

* build: install types/pg and update main.yml

* build: change client to js file

* build: update password

* build: update main.yml

* build: update main.yml

* build: update main.yml

* build: update main.yml cr

--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "author": "Samuel <samnap11@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.ts",
-    "test": "jest",
+    "dev": "dotenv -e .env.development nodemon src/index.ts",
+    "test": "dotenv -e .env.test -- jest --coverage",
     "build": "tsc -p tsconfig.json",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "dev:push": "dotenv -e .env.development -- prisma db push --force-reset",
+    "test:push": "dotenv -e .env.test -- prisma db push --force-reset",
+    "dev:seed": "dotenv -e .env.development -- prisma db seed --preview-feature",
+    "test:seed": "dotenv -e .env.test -- prisma db seed --preview-feature"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
@@ -18,25 +22,32 @@
     "@types/faker": "^5.5.7",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.0",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "faker": "^5.5.3",
     "husky": "^6.0.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.6",
+    "jest-mock-extended": "^1.0.18",
     "lint-staged": "^10.5.4",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "prisma": "^2.22.1",
-    "ts-jest": "^26.5.5",
+    "superagent": "^6.1.0",
+    "supertest": "^6.1.4",
+    "ts-jest": "^27.0.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "@prisma/client": "^2.22.1",
     "dotenv": "^9.0.1",
+    "dotenv-cli": "^4.0.0",
     "express": "^4.17.1"
   }
 }
