--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "@prisma/client": "^2.22.1",
     "dotenv": "^9.0.1",
     "dotenv-cli": "^4.0.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "express": "^4.17.1"
   }
 }
