--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev:push": "dotenv -e .env.development -- prisma db push --force-reset",
     "test:push": "dotenv -e .env.test -- prisma db push --force-reset",
     "dev:seed": "dotenv -e .env.development -- prisma db seed --preview-feature",
-    "test:seed": "dotenv -e .env.test -- prisma db seed --preview-feature"
+    "test:seed": "dotenv -e .env.test -- prisma db seed --preview-feature",
+    "heroku-postbuild": "tsc -p tsconfig.json"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
@@ -49,5 +50,8 @@
     "dotenv": "^9.0.1",
     "dotenv-cli": "^4.0.0",
     "express": "^4.17.1"
+  },
+  "engines": {
+    "node": "15.2.0"
   }
 }
