--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,15 @@
 
 name: CI
 
-on: [push, pull_request]
-
+on:
+  push:
+    branches:
+      - main
+      - develop
+  pull_request:
+    branches:
+      - develop
+  
 jobs:
   build:
     runs-on: ubuntu-latest
