--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
   pull_request:
     branches:
       - develop
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -57,3 +57,4 @@ jobs:
         env:
           PORT: 8000
           DATABASE_URL: postgresql://postgres:password@localhost:5432/api-pmb-test?schema=public
+          API_KEY: G0/wuYeGu4qBu7SlfIbDfg==\$nYJyL8qI80dsXUna/iPOOPMpvS/qF0JuFjohuXag6Ir/XUOYBXyw79klM55QsORp/NZfXEFm5abPSQ/IOzsM3g==
