--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.11",
     "@types/faker": "^5.5.7",
     "@types/jest": "^26.0.24",
@@ -48,6 +49,7 @@
   },
   "dependencies": {
     "@prisma/client": "^2.29.1",
+    "cors": "^2.8.5",
     "dotenv": "^9.0.1",
     "dotenv-cli": "^4.0.0",
     "express": "^4.17.1"
