build: fix yarn run build script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "dotenv -e .env.development nodemon src/index.ts",
     "test": "dotenv -e .env.test -- jest --coverage",
-    "build": "tsc -p tsconfig.json && cp -r ./kabupaten ../dist/data",
+    "build": "tsc -p tsconfig.json && cp -r .data/kabupaten ./dist/data",
     "prepare": "husky install",
     "dev:push": "dotenv -e .env.development -- prisma db push --force-reset",
     "test:push": "dotenv -e .env.test -- prisma db push --force-reset",
